# spargel

./: .gitignore  CHANGELOG  README.md
code/: .dockerignore  Cargo.toml  Dockerfile
code/src/: feed.rs  helpers.rs  main.rs
code/src/routes/: index.rs  media.rs  mod.rs  post.rs  rss.rs  util.rs
code/src/structs/: blog.rs  mod.rs  pagination.rs  post.rs
code/static/: main.css  main.css.map  terminal.min.css  terminal.min.css.map
code/templates/: error.html.tera  index.html.hbs  index.html.tera  layout.html.tera  media.htm.tera  post.html.hbs  post.html.tera
code/templates/partials/: _footer.html.hbs  _head.html.hbs  css.html.tera  footer.html.tera  header.html.tera  media.html.tera  pagination.html.tera  post.html.tera  post_editor.html.tera  post_excempt.tera  post_list.html.tera
code/templates/plain/: index.html.tera  layout.html.tera  media.htm.tera  package.json  post.html.tera
code/templates/plain/partials/: css.html.tera  header.html.tera  pagination.html.tera  post.html.tera  post_editor.html.tera
code/templates/plain/sass/: main.scss
code/templates/sass/: main.scss
code/templates/terminal.css/: error.html.tera  index.html.tera  layout.html.tera  media.htm.tera  post.html.tera
code/templates/terminal.css/partials/: css.html.tera  footer.html.tera  header.html.tera  pagination.html.tera  post.html.tera  post_excempt.tera  post_list.html.tera
code/templates/terminal.css/sass/: package.json
design/: logo.afphoto
