[package]
name = "src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
serde = "1.0.196"
serde_json = "1.0"
md5 = "0.7.0"
chrono = "0.4"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars", "tera"]
