[package]
name = "spargel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
serde = "1.0.196"
serde_json = "1.0"
md5 = "0.7.0"
chrono = "0.4"
indexmap = "2.2.1"
slugify = "0.1.0"
rss = "2.0"
markdown = "1.0.0-alpha.16"
regex = "1.10.3"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["serve"]